# AgentGuard

./: .evaluator-feedback.txt  .gitignore  .ralph-log.txt  .ralph-output.txt  .story-current.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUARDRAILS.md  LOOPS.md  MANIFEST.in  README.md  REVIEW.md  SECURITY.md  install.sh  program.md  progress.txt  pyproject.toml  ralph.sh  ruff.toml  run-ralph.sh
.claude-plugin/: marketplace.json
.claude/skills/agentguard-diagnose-session/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
.hypothesis/constants/: 0e71a49b2a93c854  17728ca357a2d132  1847b6e689077290  1f8096deca38652d  20da666ce63d7a40  2110d44222a5f3e5  23250adaa641fe1f  25d1ff3a5c2c9228  277ef2bc8797b61c  2d94f8d76765a8ab  2dd1df39def87860  2ea842483ae8c51a  2fc93e9825c672e4  32cb1882638491d3  341d3f6357ccb0f3  41c8dfe2d5dd130a  468fa6bb01596d9a  4d126abf8852fdf8  50fc9a8e095cf913  540599fd694ef8e9  5623ac9469c80ceb  57821b5c1240b674  57fcbd7dd6760fce  601d46104f91fb38  6189b5decb0ecb94  6c6133d57b9e9ff3  6d6270464916ff5f  70ec9ffda52fb441  70f0e769f75ba8bd  73b6ee9842132554  7cdc9ec7ab7f036a  7e388457ebbbee47  7ed0f9123753f70a  8860b3163a7b75f3  8c80b4ae22b5877e  8e257c5ee5222014  9920708e41f007bc  9a293167419e98af  9ad28dee7d747259  9ad5a17b919409b2  (+28 more)
.loops/: cli-progress.md  docs-progress.md  eval-progress.md  sdk-progress.md
agentguard/: __init__.py  __main__.py  ab_test.py  aggregate.py  alerts.py  analysis.py  annotations.py  ascii_viz.py  batch.py  benchmark.py  budget.py  builder.py  comparison.py  compat.py  compress.py  context_flow.py  correlation.py  dashboard.py  dependency.py  diff.py  errors.py  evolve.py  export.py  export_v2.py  filter.py  flowgraph.py  generate.py  guard.py  health.py  importer.py  manipulate.py  markdown.py  metrics.py  normalize.py  optimize.py  plugin.py  profile.py  propagation.py  query.py  replay.py  (+15 more)
agentguard/cli/: main.py
agentguard/core/: config.py  eval_schema.py  limits.py  trace.py
agentguard/diagnostics/: __init__.py  analysis.py  context_flow.py  correlation.py  flowgraph.py  propagation.py  scoring.py  timeline.py  tree.py
agentguard/eval/: compare.py  llm.py  rules.py
agentguard/integrations/: langchain.py
agentguard/runtime/: __init__.py
agentguard/runtime/claude/: __init__.py  adapter.py  context_bridge.py  hook_bridge.py  session_import.py  task_bridge.py  wiring.py
agentguard/sdk/: async_decorators.py  context.py  decorators.py  distributed.py  exporter.py  handoff.py  hooks.py  manual.py  middleware.py  recorder.py  threading.py
agentguard/web/: _prototype.py  viewer.py
docs/: api-reference.md  architecture.md  best-practices.md  configuration.md  current-state-review-zh.md  examples.md  faq.md  getting-started.md  project-direction-review-zh.md  prototype.html  quickstart.md  ralph-loop-guide.md  tutorial.md  ui-panel-review-zh.md
docs/prototypes/: orchestration-bus-diagnostics-prototype.html  orchestration-dashboard-prototype.html
docs/screenshots/: 2806ed90-929c-41.txt  d24a1f5c-14a1-41.txt  trace-failure.html  trace-failure.txt  trace-generic.txt  trace-list.html  trace-success.html  trace-success.txt
examples/: agentguard.json  async_demo.py  coding_pipeline.py  content_pipeline.py  custom_cost_model.py  data_pipeline.py  debug_context_loss.py  deep_analysis_demo.py  demo.py  demo_with_handoffs.py  error_recovery.py  evolution_loop.py  full_analysis.py  integration_minimal.py  minimal.py  multi_hop_rag_pipeline.py  multi_model_pipeline.py  mvp_html_prototype.py  parallel_coding.py  parallel_pipeline.py  parallel_vs_sequential.py  production_usage.py  real_world.py  security_pipeline.py  subprocess_demo.py  support_pipeline.py
plugins/agentguard-claude-code/: README.md
plugins/agentguard-claude-code/.claude-plugin/: plugin.json
plugins/agentguard-claude-code/hooks/: hooks.json
plugins/agentguard-claude-code/scripts/: ensure-agentguard.sh  post-session-diagnose.sh
plugins/agentguard-claude-code/skills/diagnose-session/: SKILL.md
plugins/agentguard-claude-code/skills/diagnose-trace/: SKILL.md
plugins/agentguard-claude-code/skills/list-sessions/: SKILL.md
scripts/: generate_screenshots.py
tests/: test_ab_test.py  test_adversarial_traces.py  test_aggregate.py  test_alerts.py  test_analysis.py  test_annotations.py  test_ascii_viz.py  test_async.py  test_async_sdk.py  test_auto_extract_cost.py  test_batch.py  test_batch_exporter.py  test_benchmark.py  test_bottleneck_own_time.py  test_budget.py  test_builder.py  test_builder_advanced.py  test_builder_timestamps.py  test_causal_confidence.py  test_circular_handoffs.py  test_claude_code_assets.py  test_claude_completion_signal.py  test_claude_deliverables.py  test_claude_import_errors.py  test_claude_import_fidelity.py  test_claude_runtime_adapter.py  test_claude_sdk_contract.py  test_claude_session_import.py  test_cli_all_commands.py  test_cli_analyze_json.py  test_cli_diff.py  test_cli_expected_artifact.py  test_cli_integration.py  test_cli_summary.py  test_cli_surface.py  test_compare.py  test_compare_view.py  test_comparison.py  test_compat.py  test_complex_single_trace_correlation.py  (+129 more)
