[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Diagnostics for multi-agent orchestration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "betaHi"},
]
keywords = ["ai", "agent", "multi-agent", "diagnostics", "orchestration", "trace", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
# Pinned to a narrow range we have verified against real Claude sessions.
# Update this window together with the contract test in
# tests/test_claude_sdk_contract.py whenever we validate a new SDK release.
claude = ["claude-agent-sdk>=0.5.0,<0.8.0"]
dev = ["pytest>=7.0", "hypothesis>=6.0", "ruff>=0.4", "mypy>=1.0"]
all = ["pyyaml>=6.0", "claude-agent-sdk>=0.5.0,<0.8.0"]

[project.scripts]
agentguard = "agentguard.cli.main:main"

[project.urls]
Homepage = "https://github.com/betaHi/AgentGuard"
Repository = "https://github.com/betaHi/AgentGuard"
Issues = "https://github.com/betaHi/AgentGuard/issues"
Documentation = "https://github.com/betaHi/AgentGuard#readme"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentguard*"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual adoption
check_untyped_defs = true
